# fast-filters

./: .gitignore  README.md  setup.cfg  setup.py  tox.ini
fast_filter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fast_filters/: binary.py  brute_force.py
notebooks/: 01 - compare brute force vs binary trick.ipynb  1 - testing binary filters.ipynb
scripts/: generate_examples.py
tests/: test_binary.py  test_brute_force.py
