[metadata]
name = fast-filter
author = Alex Molas
url = https://github.com/AlexMolas/fast-filter
description="Tools to filter lists of lists in a fast way"
long_description = file: README.md
long_description_content_type = text/markdown
license = "Proprietary"
keywords = python data
python-requires = '>=3.7'

[options]
zip_safe = True
packages = find:
setup_requires =
    setuptools
install_requires =
    pandas
    numpy
    pydantic
    pyarrow

[options.extras_require]
dev =
    autoflake
    black
    mypy
    pytest

[options.packages.find]
exclude =
    tests
